@@ -1125,7 +1125,7 @@ sub parse_arguments ()
     &set_strictness ('gnu');
 
     use Getopt::Long;
-    Getopt::Long::config ("bundling");
+    Getopt::Long::config ("bundling", "pass_through");
     Getopt::Long::GetOptions
       (
        'version' 	=> \&version,
@@ -1150,6 +1150,13 @@ sub parse_arguments ()
 
     foreach my $arg (@ARGV)
     {
+      if ($arg =~ /^-./)
+	{
+	  print STDERR "$0: unrecognized option `$arg'\n";
+	  print STDERR "Try `$0 --help' for more information.\n";
+	  exit (1);
+	}
+
       # Handle $local:$input syntax.  Note that we only examine the
       # first ":" file to see if it is automake input; the rest are
       # just taken verbatim.  We still keep all the files around for
