@@ -1,3 +1,8 @@
+2002-01-21  Akim Demaille  <akim@epita.fr>
+
+	* automake.in (&parse_arguments): Use a more GNUish error message
+	on wrong options.
+
 2002-01-20  Tom Tromey  <tromey@redhat.com>
 
 	Fix for PR automake/231:
